# Smart-Lab-Device-Control-Hub

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  cli.md
proto/: smart_lab.proto
scripts/: dev_bootstrap.sh  run_api.sh  run_grpc.sh
src/smart_lab/: __init__.py
src/smart_lab/api/: main.py  routes.py  schemas.py  websockets.py
src/smart_lab/cli/: grpc_client.py  main.py
src/smart_lab/database/: init_db.py  models.py  repository.py  session.py
src/smart_lab/devices/: __init__.py  base.py  communication.py  registry.py  simulators.py
src/smart_lab/grpc_generated/: __init__.py
src/smart_lab/grpc_server/: __init__.py  server.py
src/smart_lab/monitoring/: __init__.py  system.py
src/smart_lab/scheduler/: __init__.py  assay.py
src/smart_lab/services/: __init__.py  device_manager.py  rate_limit.py  telemetry_service.py  worker_runtime.py
src/smart_lab/shared/: __init__.py  config.py  event_bus.py  logging.py  models.py
src/smart_lab/workers/: __init__.py  cpu_worker.py  ipc.py  socket_status.py
tests/: test_api.py  test_cpu_worker.py  test_devices_async.py  test_event_bus.py  test_ipc.py
