[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-lab-device-control-hub"
version = "0.1.0"
description = "Industrial-style backend platform for simulated laboratory device control, telemetry, IPC, gRPC, and assay orchestration."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Smart Lab Engineering" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "httpx>=0.27",
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    "protobuf>=5.27",
    "tenacity>=8.3",
    "pyserial>=3.5",
    "psutil>=5.9",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
labctl = "smart_lab.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "N"]
ignore = ["B008"]

[tool.coverage.run]
source = ["src/smart_lab"]
branch = true
